<resources>
    <string name="app_name">EagleRide</string>
    <string name="title_ride">Ride</string>
    <string name="title_map">Map</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="eagleRide">Eagle Ride</string>
    <string name="requestType">Type of request?</string>
    <string name="time">Between what times do you want the pick up to be?</string>
    <string name="dropoff_location">Drop off Location</string>
    <string name="pick_up">Pick up</string>
    <string name="name">Name</string>
    <string name="brand">Car Make</string>
    <string name="color">Car Color</string>
    <string name="model">Car Model</string>
    <string name="next">Next</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="confirm">Confirm</string>
    <string name="changePassword">Change Password</string>
    <string name="EnterPassword">Enter old password</string>
    <string name="ConfirmPassword">Confirm old password</string>
    <string name="NewPassword">Enter new password</string>
    <string name="match_info">Match Info</string>
    <string name="complete_ride">Complete</string>
    <string name="cancel">Cancel</string>
    <string name="request_info">Request Info</string>
    <string name="logout">Logout</string>
</resources>
