<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <TextView
        android:id="@+id/eagleRide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eagleRide"
        android:textSize="16pt"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/eagleRide"
        android:text="@string/profile"
        android:layout_margin="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <TextView
        android:id="@+id/requestType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requestType"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@id/eagleRide"
        android:layout_margin="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/requestSwitch"
        app:layout_constraintTop_toBottomOf="@id/eagleRide"
        app:layout_constraintLeft_toRightOf="@id/requestType"
        android:layout_margin="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@id/requestSwitch"
        android:layout_margin="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeButton"
        app:layout_constraintTop_toBottomOf="@id/time"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeButton2"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintLeft_toRightOf="@id/and"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/and"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="to"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintLeft_toRightOf="@id/timeButton"
        app:layout_constraintRight_toLeftOf="@id/timeButton2"
        android:layout_margin="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="25dp"/>

    <TextView
        android:id="@+id/dropoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dropoff_location"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@id/timeButton"
        android:layout_margin="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <Spinner
        android:id="@+id/dropoffDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dropoff"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <TextView
        android:id="@+id/pickup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_up"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@id/dropoffDropDown"
        app:layout_constraintBottom_toTopOf="@id/pickupDropDown"
        android:layout_margin="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <Spinner
        android:id="@+id/pickupDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pickup"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/pickupDropDown"
        android:layout_margin="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@id/navigation">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/map"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/citation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginStart="77dp"
            android:background="@null"
            android:src="@drawable/citation_lot_map1" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>