<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@id/navigation">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/map"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/map"/>

        <ImageView
            android:id="@+id/citation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginStart="77dp"
            android:background="@null"
            android:src="@drawable/citation_lot_map1" />

    </RelativeLayout>

    <TextView
        android:id="@+id/match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_info"
        android:textSize="16pt"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@id/match"
        android:layout_margin="17dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_margin="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <TextView
        android:id="@+id/pickup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@id/time"
        android:layout_margin="17dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <TextView
        android:id="@+id/dropoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@id/pickup"
        android:layout_margin="17dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <TextView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@id/dropoff"
        android:layout_margin="17dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <TextView
        android:id="@+id/model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@id/brand"
        android:layout_margin="17dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <TextView
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        app:layout_constraintTop_toBottomOf="@id/model"
        android:layout_margin="17dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/complete"
        android:text="@string/complete_ride"
        app:layout_constraintTop_toBottomOf="@id/color"
        android:layout_margin="17dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/color"
        app:layout_constraintLeft_toRightOf="@id/complete"
        android:layout_margin="17dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        android:text="@string/logout"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

</android.support.constraint.ConstraintLayout>